--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-        <header>
-            <a href="/index.htmls">WebStudio</a>
+        <header>           
             <nav>
+                <a href="./index.htmls">WebStudio</a>
                 <ul>
                     <li>
                         <a href="">Studio</a>
@@ -34,14 +34,16 @@
             </address>
         </header>
         <main>
+            <!-- Секція №1 -->
             <section>
                 <h1>
                 Effective Solutions for Your Business
                 </h1>
                 <button type="button">Order Service</button>
             </section>
-            
+            <!-- Секція №2 -->
             <section>
+                <h2>/</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -60,7 +62,7 @@
                     <li>
                         <h3>Diligence</h3>
                         <p>
-                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk
+                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
 
@@ -72,30 +74,30 @@
                     </li>
                 </ul>
             </section>
-
+            <!-- Секція №3 -->
             <section>
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="/images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
 
                     <li>
-                        <img src="/images/img-2.jpg" alt="Tom Ford" width="264" height="260" />
+                        <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" />
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
 
                     <li>
-                        <img src="/images/img-1.jpg" alt="Camila Garcia" width="264" height="260" />
+                        <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260" />
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
 
                     <li>
-                        <img src="/images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
@@ -103,7 +105,7 @@
             </section>
         </main>
         <footer>
-            <a href="/index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
